--- a/src/components/cardProductsBrands/cardProductsBrands.css
+++ b/src/components/cardProductsBrands/cardProductsBrands.css
@@ -3,9 +3,10 @@ h3{
 }
 
 .productsImageBrand{
-    min-width: 306px;
-    max-width: 300px;
-    max-height: 200px;
+    min-width: 15.5vw;
+    max-width: 10vw;
+    max-height: 33vw;
+    min-height: 12vw;
 }
 
 
@@ -29,29 +30,19 @@ h3{
 }
 
 .productsArticle {
-    background-color: beige;
-    padding: 13px;
+    background-color:#f0f5f2;
     border-radius: 3px;
     position: relative; /* Agregar posición relativa */
     overflow: hidden; /* Ocultar el borde dibujado fuera del contenedor */
     cursor: pointer;
     height: max-content;
+    transition: background-color 0.3s linear;
 }
 
-.productsArticle::before { /* Pseudo-elemento para crear el borde dibujado */
-    content: "";
-    position: absolute;
-    top: -3px;
-    left: -2px;
-    right: -2px;
-    bottom: -3px;
-    border: 5px solid transparent; /* Inicialmente borde transparente */
-    transition: border 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); /* Transición para suavizar el efecto */
-    pointer-events: none; /* Evitar que el borde afecte la interacción */
-}
-
-.productsArticle:hover::before {
-    border: 6px solid rgba(0, 0, 0, 0.815); /* Cambiar el borde al color deseado */
+.productsArticle:hover {
+    background-color: #c6cac8f3; /* Color transparentoso en hover */
+    transform: translateY(-5px);
+    opacity: 1;
 }
 
 .productsArticle:hover .prevButton{
@@ -92,7 +83,7 @@ position: relative;
 }
 
 
-#productPriceBrand{
+#productPriceBra{
     padding: 1%;
     background-color: rgba(209, 209, 92, 0.815);
 }
@@ -104,9 +95,10 @@ position: relative;
 
 @media (min-width: 960px) and (max-width: 1279px) {
     .productsImageBrand {
-        min-width: 40vw;
-        max-width: 39vw;
-        max-height: 27vw;
+        min-width: 25.5vw;
+        max-width: 14vw;
+        max-height: 12vw;
+        min-height: 16vw;
     }
     
 }
@@ -114,13 +106,17 @@ position: relative;
 @media (max-width: 960px){
     .productsImageBrand {
         max-width: 4vw;
-        min-width: 44vw;
+        min-width: 40vw;
         min-height: 31vw;
         height: 100%;
     }  
 
     .productInfoContainerBrands h3 {
         font-size: 1.3rem;
+    }
+
+    .productsArticle{
+        padding: 10px;
     }
 
     .productInfoContainerBrands{
