--- a/src/components/filterProducts/filterProducts.css
+++ b/src/components/filterProducts/filterProducts.css
@@ -1,12 +1,13 @@
 .filterComponent {
-    width: 30%;
+    width: 25%;
     display: flex;
 }
 
 .filterContainer {
-    background-color: #877a7ae6;
+    background-color: #877a7a7d;
     padding: 0.8vw;
     border-radius: 8px;
+    height: fit-content;
 }
 
 .inputSearch {
@@ -15,6 +16,7 @@
     border: none;
     border-radius: 4px;
     font-size: 1rem;
+    border: 1px #9b979754 solid;
 }
 
 .inputYear {
@@ -22,6 +24,7 @@
     height: 1.4vw;
     border: none;
     border-radius: 4px;
+    border: 1px #9b979754 solid;
 }
 
 .dateContainer {
@@ -34,6 +37,7 @@
     height: 1.4vw;
     border: none;
     border-radius: 4px;
+    border: 1px #9b979754 solid;
 }
 
 .kmContainer {
@@ -46,6 +50,7 @@
     height: 1.4vw;
     border: none;
     border-radius: 4px;
+    border: 1px #9b979754 solid;
 }
 
 .priceContainer {
@@ -65,6 +70,7 @@
     height: 1.4vw;
     border-radius: 4px;
     border: 0px;
+    border: 1px #9b979754 solid;
 }
 
 .filterName {
@@ -75,6 +81,7 @@
 
 .filterTitle {
     display: flex;
+    margin: 0px;
 }
 
 .onSaleFilter h4 {
@@ -158,4 +165,17 @@
 .checkbox-wrapper-64 input:checked+.slider:before {
     transform: translateX(1.4em);
     background-color: #fff;
+}
+
+@media (min-width: 960px) and (max-width: 1279px) {
+    .filterComponent {
+        width: 32%;
+    }   
+}
+
+@media (max-width: 960px){
+    .filterComponent{
+        width: 0%;
+        display: none;
+    }
 }
