--- a/src/screen/login/loggin.css
+++ b/src/screen/login/loggin.css
@@ -3,4 +3,7 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
+                background-size: cover;
+                background-position: center;
+                background-color: aqua;
 }
