--- a/src/components/proudctDetailRelated/productDetailRelated.css
+++ b/src/components/proudctDetailRelated/productDetailRelated.css
@@ -2,15 +2,15 @@ h3{
     margin: 0px;
 }
 
-.productsImageBrand{
-    min-width: 15.5vw;
-    max-width: 10vw;
-    max-height: 10vw;
-    object-fit: cover;
+.productsImageRelated{
+    min-width: 14.5vw;
+    max-width: 29vw;
+    max-height: 3vw;
+    min-height: 8vw;
 }
 
 
-.productInfoContainerBrands{
+.productInfoContainerRelated{
     display: flex;
     justify-content: space-between;
     margin: 2% 3%;
@@ -94,7 +94,7 @@ position: relative;
 
 
 @media (min-width: 960px) and (max-width: 1279px) {
-    .productsImageBrand {
+    .productsImageRelated {
         min-width: 25.5vw;
         max-width: 14vw;
         max-height: 12vw;
@@ -104,14 +104,14 @@ position: relative;
 }
 
 @media (max-width: 960px){
-    .productsImageBrand {
+    .productsImageRelated {
         max-width: 4vw;
         min-width: 40vw;
         min-height: 31vw;
         height: 100%;
     }  
 
-    .productInfoContainerBrands h3 {
+    .productInfoContainerRelated h3 {
         font-size: 1.3rem;
     }
 
@@ -119,7 +119,7 @@ position: relative;
         padding: 10px;
     }
 
-    .productInfoContainerBrands{
+    .productInfoContainerRelated{
         width: 100%;
         align-items: center;
         display: flex;
