--- a/src/components/imgCarrouselDetail/imgCarrouselDetail.css
+++ b/src/components/imgCarrouselDetail/imgCarrouselDetail.css
@@ -29,4 +29,10 @@
 
 .image-thumbnails{
     width: 100%;
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    width: 100%;
+    background-color: #0000005c;
+    justify-content: center;
 }
