--- a/src/components/productsDetail/productsDetail.css
+++ b/src/components/productsDetail/productsDetail.css
@@ -2,6 +2,14 @@
     width: 30px;
 }
 
+.allProductDetailContainer{
+    width: 75%;
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+}
+
 .productDetailInfoName{
     display: flex;
     font-size: 1.5rem;
@@ -10,12 +18,7 @@
 }
 
 .productDetail{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: #7f7f7f;
-    border-radius: 5px;
 }
 
 .productDetailContainer{
@@ -66,9 +69,16 @@ position: relative;
 }
 
 .productsImageDetail{
-    width: 39vw;
+    width: 50vw;
     object-fit: cover;
     height: 100%;
+    min-height: 30vw;
+    max-height: 30vw;
+}
+
+.productRelatedTitle{
+    margin: 0.2% 0%;
+    font-size: 1.7rem;
 }
 
 .productDetail{
@@ -173,5 +183,12 @@ margin: 1% 0px;
     border: 0px;
     border-radius: 5px;
     margin-bottom: 4%;
+}
+
+.productRelatedContainer{
+    display: flex;
+    width: 100%;
+    gap: 1%;
+    padding-top: 1%;
 }
 
