--- a/src/screen/productsDetail/productsDetail.css
+++ b/src/screen/productsDetail/productsDetail.css
@@ -3,5 +3,5 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 104px;
+    padding-top: 4.5%;
 }
