--- a/src/components/cardProducts/cardProducts.css
+++ b/src/components/cardProducts/cardProducts.css
@@ -3,10 +3,11 @@ h3{
 }
 
 .productsImage {
-    min-width: 10vw;
+    min-width: 11vw;
     max-width: 7vw;
+    object-fit: cover;
     max-height: 10vw;
-    min-height: 8vw;
+    min-height: 10vw;
 }
 
 
