--- a/src/components/productsDetail/productsDetail.css
+++ b/src/components/productsDetail/productsDetail.css
@@ -4,10 +4,6 @@
 
 .allProductDetailContainer{
     width: 75%;
-    position: absolute;
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
 }
 
 .productDetailInfoName{
@@ -90,7 +86,7 @@ position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2% 5%;
+    margin: 2% 3%;
     background-color: #d3d3d338;
     border-radius: 7px;
 }
@@ -119,6 +115,10 @@ position: relative;
 margin: 1% 0px;
 }
 
+.productDetailDescription h3{
+    font-weight: 300;
+}
+
 .productDetailPriceContainer{
     width: 100%;
     display: flex;
@@ -132,8 +132,8 @@ margin: 1% 0px;
 
 .productDetailPrice h2{
     font-size: 2.5rem;
-    font-weight: 700;
-    color: rgb(8, 172, 8);
+    font-weight: 500;
+    color: black;
     margin: 2% 0%;
 }
 
@@ -149,7 +149,7 @@ margin: 1% 0px;
 
 .whatsappButton{
     width: 100%;
-    height: 2vw;
+    height: 2.5vw;
     font-size: 1.2rem;
     font-weight: 600;
     background-color: #25D366;
@@ -174,8 +174,8 @@ margin: 1% 0px;
 
 .favButton{
     width: 100%;
-    height: 2vw;
-    margin-top: 3%;
+    height: 2.5vw;
+    margin-top: 0.5%;
     font-size: 1.2rem;
     font-weight: 600;
     background-color: #d81414;
