--- a/src/components/Popups/burgerMenu/burgerMenu.css
+++ b/src/components/Popups/burgerMenu/burgerMenu.css
@@ -14,7 +14,6 @@
 .bm-main-choose {
     width: 100%;
     height: 100%;
-    margin-top: 3%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
@@ -24,8 +23,8 @@
     position: absolute;
     background: rgba(36, 48, 60, 0.8);
     width: 100%;
-    height: 93vh;
-    margin-top: 7vh;
+    height: 100%;
+    padding-top: 7vh;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
