--- a/src/components/productsDetail/productsDetail.css
+++ b/src/components/productsDetail/productsDetail.css
@@ -13,17 +13,16 @@
     margin-top: 4%;
 }
 
-.productDetail{
-    background-color: #7f7f7f;
-}
-
 .productDetailContainer{
         height: auto;
         display: flex;
         width: 25vw;
         flex-direction: column;
         align-content: space-between;
-        justify-content: space-between; 
+        justify-content: space-between;
+        background-color: #bababa;
+        margin-left: 1%;
+        border-radius: 8px;
 }
 
 .productDetailBrand{
@@ -70,6 +69,9 @@ position: relative;
     height: 100%;
     min-height: 30vw;
     max-height: 30vw;
+    border-radius: 8px;
+    user-select: none;
+
 }
 
 .productRelatedTitle{
@@ -87,7 +89,7 @@ position: relative;
     flex-direction: column;
     align-items: center;
     margin: 2% 3%;
-    background-color: #d3d3d338;
+    background-color: #d3d3d3;
     border-radius: 7px;
 }
 
@@ -128,6 +130,7 @@ margin: 1% 0px;
 
 .productDetailPrice{
     width: 88%;
+    display: flex;
 }
 
 .productDetailPrice h2{
@@ -186,9 +189,109 @@ margin: 1% 0px;
 }
 
 .productRelatedContainer{
-    display: flex;
-    width: 100%;
-    gap: 1%;
+      /* display: flex; */
+    /* width: 100%; */
+    /* gap: 0.8%; */
     padding-top: 1%;
+    display: grid;
+    grid-template-columns: repeat(5, 19.65%);
+    gap: 0.5%;
+    width: 100%;
 }
 
+#productPriceOldDetail{
+    font-weight: 150;
+    opacity: 0.7;
+    padding-left: 2%;
+}
+
+.line-throw-detail{
+    text-decoration: line-through;
+    text-decoration-thickness: 2px;
+}
+
+@media (min-width: 960px) and (max-width: 1279px) {
+.productDetail{
+    flex-direction: column;
+}
+
+.productsImageDetail{
+    width: 75vw;
+    max-height: 38vw;
+}
+
+.productDetailContainer{
+    margin-left: 0px;
+    width: 100%;
+    margin-top: 2%;
+}
+
+.productDetailInfo h2{
+    margin: 1%;
+}
+
+.productDetailInfoName{
+    margin-top: 1%;
+}
+
+.favButton{
+    margin-bottom: 2%;
+    height: 3.5vw;
+    margin-top: 1%;
+}
+
+.whatsappButton{
+    height: 3.5vw;
+}
+
+}
+
+@media (max-width: 960px) {
+    .allProductDetailContainer{
+        width: 95%;
+    }
+    
+    .productDetail{
+        flex-direction: column;
+    }
+    
+    .productsImageDetail{
+        width: 95vw;
+        max-height: 50vw;
+    }
+    
+    .productDetailContainer{
+        margin-left: 0px;
+        width: 100%;
+        margin-top: 2%;
+    }
+    
+    .productDetailInfo h2{
+        margin: 1%;
+    }
+    
+    .productDetailInfoName{
+        margin-top: 1%;
+    }
+    
+    .favButton{
+        margin-bottom: 2%;
+        height: 45px;
+        margin-top: 1%;
+    }
+    
+    .whatsappButton{
+        height: 45px;
+    }
+    
+    .productRelatedContainer{
+    display: flex;
+    width: 100%;
+    gap: 1.5%;
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    }
+    
+    }
