--- a/src/screen/productsDetail/productsDetail.css
+++ b/src/screen/productsDetail/productsDetail.css
@@ -3,5 +3,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 4.5%;
+    padding-top: 100px;
+}
+
+@media (min-width: 960px) and (max-width: 1279px) {
+    .productsDetail{
+        padding-top: 80px;
+    }
+    }
+
+@media (max-width: 960px){
+    .productsDetail{
+        padding-top: 100px
+    }
 }
