adding a carBody API and new carousel home

--- a/src/components/productsDetail/productsDetail.css
+++ b/src/components/productsDetail/productsDetail.css
@@ -71,7 +71,7 @@ position: relative;
     max-height: 30vw;
     border-radius: 8px;
     user-select: none;
-
+    cursor: pointer;
 }
 
 .productRelatedTitle{
