--- a/src/components/filterProducts/filterProducts.css
+++ b/src/components/filterProducts/filterProducts.css
@@ -9,6 +9,12 @@
     padding: 0.8vw;
     border-radius: 8px;
     height: fit-content;
+    position: fixed;
+    width: 20vw;
+}
+
+.puto{
+    display: none;
 }
 
 .inputSearch {
@@ -18,6 +24,7 @@
     font-size: 1rem;
     border: 1px #9b979754 solid;
 }
+
 
 /* Brand */
 .modelsInputDiv-hidden {
@@ -36,7 +43,7 @@
 
 .scrollable-content {
     width: 100%;
-    max-height: 200px;
+    max-height: 170px;
     overflow-y: auto;
     border-bottom: 1px solid gray;
 }
@@ -59,14 +66,34 @@
 
 
 .modelDivCheckbox {
-    margin: 0;
     display: flex;
-    width: 45%;
-    justify-content: flex-start;
+    width: 98%;
+    justify-content: space-between;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 2% 0%;
 }
 
-.modelDivCheckbox p {
-    margin-left: 2%;
+.modelDivCheckbox:hover{
+    background-color: #55555533;
+}
+
+.modelDivCheckbox p{
+    margin: 2% 0px;
+    display: flex;
+    align-items: center;
+}
+
+label{
+    display: none;
+}
+
+.logoBrandFilter{
+    width: 2.2vw;
+    height: 2.2vw;
+    object-fit: cover;
+    padding-right: 1%;
+    display: none;
 }
 
 .brandModels{
@@ -74,16 +101,54 @@
     flex-direction: column;
 }
 
-.filterModlesBrandName{
+.filterModlesBrandName {
     display: flex;
     border-bottom: 1px dashed gray;
+    cursor: pointer;
+    justify-content: space-between;
+    align-items: center;
 }
+
+.filterModelsNameshideOptions {
+    display: none;
+}
+
+.filterModlesBrandNameexpanded{
+    display: flex;
+    border-bottom: 1px dashed gray;
+    cursor: pointer;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.arrow-icon{
+    padding-right: 3px;
+    transition: transform 0.3s ease;
+}
+
+.arrow-iconexpanded{
+    padding-right: 3px;
+}
+
+
+.modelNameFilter{
+    margin: 10px 0px;
+}
+
+
+
 .filterModelsNames{
     display: flex;
     flex-direction: column;
 }
+
 .filterModelsNameDiv{
     display: flex;
+    cursor: pointer;
+}
+
+.filterModelsNameDiv:hover{
+    background-color: #5555554f;
 }
 
 .inputYear {
@@ -150,6 +215,19 @@
     /* Hacerlo circular */
     margin-right: 10px;
     /* Espacio entre círculos */
+    cursor: pointer;
+}
+
+.selected-brand {
+    border: 2px solid #007bff; /* Color del borde cuando está seleccionado */
+    transition: border-color 0.3s ease; /* Transición suave del color del borde */
+    border-radius: 10px;
+    margin: 2% 0%;
+    box-sizing: border-box;
+}
+
+.checkBoxBrand{
+    display: none;
 }
 
 .white {
@@ -273,6 +351,10 @@
 @media (min-width: 960px) and (max-width: 1279px) {
     .filterComponent {
         width: 32%;
+    }
+
+    .filterContainer{
+        width: 24.5vw;
     }
 }
 
