--- a/src/components/imgCarrouselDetail/imgCarrouselDetail.css
+++ b/src/components/imgCarrouselDetail/imgCarrouselDetail.css
@@ -39,3 +39,33 @@
     justify-content: center;
     border-radius: 0px 0px 8px 8px;
 }
+
+.imageFullWidhtContainer{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.closeXdetail{
+  font-size: 3rem;
+  color: red;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+}
+
+.fullWidhtImage{
+    max-width: 90%;
+    max-height: 90%;
+    margin: auto;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    user-select: none;
+}
