--- a/src/components/allProducts/allProducts.css
+++ b/src/components/allProducts/allProducts.css
@@ -13,7 +13,7 @@
     display: flex;
     width: 70%;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding-left: 0.5vw;
     gap: 0.5vw;
     flex-direction: row;
