--- a/src/components/cardProductsBrands/cardProductsBrands.css
+++ b/src/components/cardProductsBrands/cardProductsBrands.css
@@ -57,6 +57,10 @@ h3{
     display: block;
 }
 
+.productsArticle:hover .productInfoPriceDiscount{
+   opacity: 1;
+}
+
 .image-carousel{
 position: relative;
 }
@@ -82,6 +86,11 @@ position: relative;
   right: 10px;
 }
 
+.productPriceBrand{
+    margin: 0px;
+    padding: 0px;
+}
+
 
 #productPriceBra{
     padding: 1%;
@@ -90,6 +99,24 @@ position: relative;
 
 #productYear{
     padding-left: 10px;
+}
+
+.productInfoPrice{
+margin: 0px;
+padding: 0px;
+font-size: 1.2rem;
+}
+
+.productInfoPriceDiscount{
+    font-size: 1.2rem;
+    position: absolute;
+    margin: 0px;
+    padding-top: 1%;
+    color: gray;
+    opacity: 0;
+    font-weight: 500;
+
+    transition: opacity 0.3s ease;
 }
 
 
