--- a/src/components/sellCarBlock/sellCarBlock.css
+++ b/src/components/sellCarBlock/sellCarBlock.css
@@ -178,7 +178,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 3%;
 }
 
 .sellCarPriceIcon{
@@ -269,6 +268,53 @@
   align-items: center;
   transition: linear 0.2s background-color;
   transition: linear 0.3s position;
+}
+
+
+.sellCarAdminSection{
+  width: 100%;
+  display: flex;
+  background-color: #333333e6;
+  border-radius: 5px;
+  padding: 1.3% 0%;
+  margin: 1.5% 0%;
+  flex-direction: column;
+}
+
+.sellCarAdminButtons{
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+#sellCarAdminInput{
+  width: 25%;
+  height: 30px;
+  font-size: 1.05rem;
+  border: 0px; 
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+#sellCarAdminInput:hover{
+  background-color: #ddd9d9c3;
+}
+
+.sellCarAdminTitle{
+  width: 92%;
+  margin: 0%;
+  font-size: 1.8rem;
+  font-weight: 500;
+  padding-bottom: 0.5%;
+  margin-bottom: 1%;
+  border-bottom: 2px solid rgba(254, 254, 254, 0.676);
+  color: rgb(241, 241, 241);
+}
+
+.sellCarAdminTitleContainer{
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 1300px) {
