--- a/src/components/Popups/addPopup/addPopup.css
+++ b/src/components/Popups/addPopup/addPopup.css
@@ -23,8 +23,8 @@
 }
 
 .acp-choose-main-div {
-    width: 100%;
-    height: 80%;
+    width: 40%;
+    height: 60%;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -36,12 +36,6 @@
     transform: translate(-50%, -50%);
 }
 
-
-.acp-main-div-top{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
 .acp-close-popup-div{
     width: 100%;
     display: flex;
@@ -61,130 +55,193 @@
 /* COLOR */
 .acp-choose-color-input-div{
     width: 100%;
+    height: 70%;
     display: flex;
     justify-content: space-around;
     align-content: center;
     align-items: center;
+    flex-direction: column;
+}
+.acp-main-div-top-color {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+}
+.acp-choose-color-name-div{
+    margin: 0px;
+    color: rgb(255, 255, 255);
+    font-weight: 300;
+    margin-bottom: 3%;
 }
 .acp-main-color-input-div{
     width: 70%;
-    height: 100%;
+    height: auto;
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    flex-direction: column;
 }
 .acp-name-input-color{
-    width: 80%;
-    height: 100%;
+    width: 96%;
+    height: 2vw;
+    border-radius: 3px;
+    border: 0px;
+}
+.acp-name-input-color:focus-visible{
+   outline: none;
 }
 .acp-code-input-color{
-    width: 30px;
-    height: 30px;
-    border-radius: 50%; 
-    transition: transform 0.2s; 
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    border-radius: 0px;
+    border: none;
+    transition: transform 0.2s;
     cursor: pointer;
+    background-color: transparent;
+    appearance: none;
+  }
+  .acp-code-input-color::-webkit-color-swatch {
+    border-radius: 5px;
+    border: none;
+  }
+  .acp-code-input-color::-moz-color-swatch {
+    border-radius: 5px;
+    border: none;
   }
 .acp-button-color{
-    width: 20%;
-    height: 100%;
+    width: 57%;
+    height: 2vw;
     border: none;
+    border-radius: 3px;
     cursor: pointer;
     transition: all 0.5s;
 }
 .acp-button-color:hover{
     box-shadow: (7px 7px 7px rgba(0, 0, 0, 0.8));
-    background-color: blue;
-    color: white;
-    font-weight: 600;
+    background-color: rgb(203, 198, 198);
+    font-weight: 500;
 }
 
 /* MODEL */
 .acp-choose-model-input-div{
     width: 100%;
+    height: 70%;
     display: flex;
     justify-content: space-around;
     align-content: center;
     align-items: center;
+    flex-direction: column;
+}
+.acp-main-div-top-model {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
 }
 .acp-main-model-input-div{
     width: 70%;
-    height: 100%;
+    height: auto;
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    flex-direction: column;
 }
 .acp-name-input-model{
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    height: 30px;
+    border-radius: 3px;
+    border: 0px;
 }
+.acp-name-input-brand{
+    font-size: 1.6rem;
+    margin: 0px;
+    color: rgb(255, 255, 255);
+    font-weight: 300;
+    margin-bottom: 3%;
+    margin-top: 5%;      
+}
+.acp-name-input-model:focus-visible{
+ outline: none;
+}
+
 .acp-brand-input-model{
-    width: 40%;
-    height: 100%;
+    width: 100%;
+    height: 30px;
     transition: transform 0.2s; 
     cursor: pointer;
-  }
+}
 .acp-button-model{
-    width: 20%;
-    height: 100%;
+    width: 57%;
+    height: 2vw;
     border: none;
+    border-radius: 3px;
     cursor: pointer;
     transition: all 0.5s;
 }
 .acp-button-model:hover{
     box-shadow: (7px 7px 7px rgba(0, 0, 0, 0.8));
-    background-color: blue;
-    color: white;
-    font-weight: 600;
+    background-color: rgb(203, 198, 198);
+    font-weight: 500;
 }
 
 /* VERSION  */
 .acp-choose-version-input-div{
     width: 100%;
+    height: 70%;
     display: flex;
     justify-content: space-around;
     align-content: center;
     align-items: center;
+    flex-direction: column;
+}
+.acp-main-div-top-version {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .acp-main-version-input-div{
     width: 70%;
-    height: 100%;
+    height: auto;
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    flex-direction: column;
 }
 .acp-name-input-version{
-    width: 30%;
-    height: 100%;
+    width: 100%;
+    height: 30px;
+    border-radius: 3px;
+    border: 0px;
 }
 .acp-brand-input-version{
-    width: 30%;
-    height: 100%;
+    width: 100%;
+    height: 30px;
     transition: transform 0.2s; 
     cursor: pointer;
   }
 .acp-button-version{
-    width: 20%;
-    height: 100%;
+    width: 57%;
+    height: 2vw;
     border: none;
+    border-radius: 3px;
     cursor: pointer;
     transition: all 0.5s;
 }
 .acp-button-version:hover{
     box-shadow: (7px 7px 7px rgba(0, 0, 0, 0.8));
-    background-color: blue;
-    color: white;
-    font-weight: 600;
+    background-color: rgb(203, 198, 198);
+    font-weight: 500;
 }
 
-@media (min-width: 724px) {
+@media (max-width: 724px) {
     .acp-choose-main-div {
         width: 80%;
         height: 70%;
     }
 }
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
     .acp-choose-main-div {
-        width: 30%;
-        height: 60%;
+        width: 80%;
+        height: 70%;
     }
 }
