--- a/src/components/imgCarrousel/imgCarrousel.css
+++ b/src/components/imgCarrousel/imgCarrousel.css
@@ -38,7 +38,7 @@
   
   
   svg {
-    padding: 5px;
+    padding: 0px;
   }
   
   .id-arrow {
@@ -55,7 +55,7 @@
   
   
   .id-right {
-    left: 75%;
+   right: -1.8%;
   }
   
   .id-left:hover polyline,
