--- a/src/components/productsDetail/productsDetail.css
+++ b/src/components/productsDetail/productsDetail.css
@@ -159,6 +159,9 @@ margin: 1% 0px;
     cursor: pointer;
     border: 0px;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #whatsappIcon{
@@ -175,6 +178,13 @@ margin: 1% 0px;
     width: 88%;
 }
 
+.productDetailMoreInfoContainer{
+    width: 50vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 .favButton{
     width: 100%;
     height: 2.5vw;
@@ -186,6 +196,9 @@ margin: 1% 0px;
     border: 0px;
     border-radius: 5px;
     margin-bottom: 4%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .productRelatedContainer{
@@ -216,7 +229,7 @@ margin: 1% 0px;
 }
 
 .productsImageDetail{
-    width: 75vw;
+    min-width: 74vw;
     max-height: 38vw;
 }
 
