--- a/src/components/userSelectedBlock/userSelectedBlock.css
+++ b/src/components/userSelectedBlock/userSelectedBlock.css
@@ -13,14 +13,111 @@
     justify-content: flex-end  
 }
 
-.userInfoTitle{
+.userInfoTitleDiv{
     position: absolute;
     top: -50px;
     left: 50%;
     transform: translateX(-54%);
-    padding: 3px 15px;
+}
+
+.userInfoTitle{
     border-radius: 10px;
     background-color: rgb(171, 172, 172);
     border: 4px solid white;
     font-weight: 600;
+    padding: 3px 15px;
+}
+
+.userInfoInputsContainer{
+    margin-top: 45px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center
+}
+
+.userInfoContainer{
+    height: 98%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.userInfoButtonContainer{
+    display: flex;
+    margin-right: 2%;
+    justify-content: flex-end; 
+}
+
+.userInfoButton{
+    width: 9vw;
+    height: 2.4vw;
+    border: 0px;
+    background-color: rgb(84, 86, 88) ;
+    color: white;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.userInfoButton:hover{
+    box-shadow: 0px 0px 11px 8px rgba(0,0,0,0.14);
+}
+
+.userInfoButton.cancel{
+    display: none;
+}
+
+.userInfoButton.cancelActive{
+    display: block;
+    margin-right: 3%;
+    background-color: red ;
+}
+
+.userInfoInputNumberContainer{
+    width: 80%;
+}
+
+.userInfoInputAreaCode{
+width: 8%;
+margin-right: 4%;
+height: 1.5vw;
+font-size: 1.1rem;
+border: none;
+background-color: rgba(253, 253, 255, 0);
+border-bottom: 1px solid;
+}
+
+.userInfoInputAreaCode:focus{
+    outline: none;
+}
+
+.userInfoInputDiv{
+    display: flex;
+    flex-direction: column;
+    margin-top: 2%;
+    width: 70%;
+}
+
+#userInfoInput{
+    height: 1.5vw;
+    font-size: 1.1rem;
+    border: none;
+    background-color: rgba(253, 253, 255, 0);
+    border-bottom: 1px solid;
+}
+
+.userInfoInputPhone{
+    height: 1.5vw;
+    font-size: 1.1rem;
+    border: none;
+    background-color: rgba(253, 253, 255, 0);
+    border-bottom: 1px solid;
+}
+
+.userInfoInputPhone:focus{
+    outline: none;
+}
+
+#userInfoInput:focus{
+    outline: none;
 }
